--- a/ApexRestaurant.Api/appsettings.json
+++ b/ApexRestaurant.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ApexRestaurant.db"
+    "DefaultConnection": "Host=localhost;Username=postgres;Password=dymond;Database=resturant_db;"
     },
   "Logging": {
     "LogLevel": {
